--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,7 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{ .Site.BaseURL }}css/bootstrap-theme.css" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=KoHo" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Arbutus+Slab&family=Cabin:600&family=Source+Code+Pro' rel='stylesheet' type='text/css'>
     <!-- Add custom CSS here -->
     <link href="{{ .Site.BaseURL }}css/HPstyles.css" rel="stylesheet">
