--- a/static/css/HPstyles.css
+++ b/static/css/HPstyles.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
 
-    font-family: 'Arbutus Slab', "Helvetica Neue", "Helvetica", sans-serif !important;
+    font-family: 'KoHo', sans-serif;
     line-height: 1.6;
 }
 
